--- a/rough paths/how_to _use_signatures.ipynb
+++ b/rough paths/how_to _use_signatures.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install tslearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# References\n",
     "# https://github.com/anh-tong/signax/tree/main/examples\n",
     "# https://docs.kidger.site/diffrax/examples/neural_cde/\n",
@@ -28,7 +37,7 @@
     "import optax\n",
     "import seaborn as sns\n",
     "import scipy\n",
-    "from sigkerax.sigkernel import SigKernel\n",
+    "# from sigkerax.sigkernel import SigKernel\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from tslearn.datasets import UCR_UEA_datasets\n",
     "from tslearn.preprocessing import TimeSeriesScalerMeanVariance\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jax-metal",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
